# corewatch

./: .gitignore  Cargo.toml  README.md  package.json
convex/: events.ts
nextjscomps/: trackEvent.ts
src/: main.rs  main.rs.bak
tests/: event_sender.rs
