[package]
name = "corewatch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
axum-client-ip = "0.6"
tracing-subscriber = "0.3"
tracing = "0.1"
